K1J-1410: Refactor HsaAttributeExtractor to use toList() for collecting PaTitle codes to ensure immutability